Bug 691466 - Colors not rendering correctly in certain files
Summary: Colors not rendering correctly in certain files
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Color (show other bugs)
Version: master
Hardware: PC Linux
: P4 normal
Assignee: Michael Vrhel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-16 13:48 UTC by Jason Giglio
Modified: 2010-12-06 20:30 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jason Giglio 2010-07-16 13:48:42 UTC
Created attachment 6499 [details]
source file

In the attached file, the banner at the top should be red, not purple.
Comment 1 Jason Giglio 2010-07-16 13:49:21 UTC
Created attachment 6500 [details]
correct color
Comment 2 Jason Giglio 2010-07-16 13:49:54 UTC
Created attachment 6501 [details]
incorrect color

gsc -dNOPAUSE -dBATCH -sOutputFile=/dev/shm/test -sDEVICE=tiffsep -r300 -f /storage/archive/03430MRO750.pdf
Comment 3 Michael Vrhel 2010-12-05 02:28:03 UTC
Created attachment 7004 [details]
bug691466_simple

A simplified file that has the problem.
Comment 4 Michael Vrhel 2010-12-06 17:56:34 UTC
Identified the issue.  The DeviceN alternate color space is CIELAB and there was no code to properly adjust the CIELAB data to the proper range for the CMM.  Testing a fix for this now.
Comment 5 Michael Vrhel 2010-12-06 20:30:55 UTC
Fixed rev 11937