Fix for bug 691466.  Problem was caused by the DeviceN alternate color space being Lab and the color values not being properly decoded to enable use of the lab ICC profile.  A few progressions in the cluster data base with this commit.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@11937 a1074d23-0009-0410-80fe-cf8c14f379e6